@@ -226,12 +226,6 @@ CREATE TABLE mailbox (
     lastloginipv4 INET NOT NULL DEFAULT '0.0.0.0',
     lastloginprotocol CHAR(255) NOT NULL DEFAULT '',
     disclaimer TEXT NOT NULL DEFAULT '',
-    -- Below 4 columns are deprecated and will be removed in future release.
-    -- Don't use them.
-    allowedsenders TEXT NOT NULL DEFAULT '',
-    rejectedsenders TEXT NOT NULL DEFAULT '',
-    allowedrecipients TEXT NOT NULL DEFAULT '',
-    rejectedrecipients TEXT NOT NULL DEFAULT '',
     -- Store per-user settings. Used in iRedAdmin-Pro.
     settings TEXT NOT NULL DEFAULT '',
     passwordlastchange TIMESTAMP WITHOUT TIME ZONE NOT NULL DEFAULT NOW()::TIMESTAMP WITHOUT TIME ZONE,
