@@ -1,3 +1,4 @@
+-- (mlmmj) mailing list owners.
 CREATE TABLE maillist_owners (
     id SERIAL PRIMARY KEY,
     address VARCHAR(255) NOT NULL DEFAULT '',
@@ -10,3 +11,9 @@ CREATE INDEX idx_maillist_owners_address ON maillist_owners (address);
 CREATE INDEX idx_maillist_owners_owner ON maillist_owners (owner);
 CREATE INDEX idx_maillist_owners_domain ON maillist_owners (domain);
 CREATE INDEX idx_maillist_owners_dest_domain ON maillist_owners (dest_domain);
+
+-- Drop unused SQL columns
+ALTER TABLE mailbox DROP COLUMN `allowedsenders`;
+ALTER TABLE mailbox DROP COLUMN `rejectedsenders`;
+ALTER TABLE mailbox DROP COLUMN `allowedrecipients`;
+ALTER TABLE mailbox DROP COLUMN `rejectedrecipients`;
